# tradex-1

./: CMakeLists.txt  CMakePresets.json  conanfile.txt  docker-compose.yaml
binance/: CMakeLists.txt  main.cpp
binance-sdk/: CMakeLists.txt  definitions.hpp  rest_client.cpp  rest_client.hpp
binance-sdk/include/: binance-sdk.h
binance-sdk/tests/: CMakeLists.txt  definitions.cpp
